--- a/scripts/package.json
+++ b/scripts/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "convert-excel-to-json": "1.6.1",
     "csvtojson": "2.0.10",
     "slug": "1.1.0"
   }
