--- a/website/package.json
+++ b/website/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@zeit/next-css": "1.0.1",
 		"next": "9.1.1",
+		"node-fetch": "2.6.0",
 		"react": "16.10.2",
 		"react-dom": "16.10.2"
 	}
