fix(build): added env variables during build process

--- a/website/now.json
+++ b/website/now.json
@@ -2,5 +2,10 @@
 	"name": "perulitico-website",
 	"env": {
 		"API_URL": "@api_url"
+	},
+	"build": {
+		"env": {
+			"API_URL": "@api_url"
+		}
 	}
 }
