--- a/website/package.json
+++ b/website/package.json
@@ -15,6 +15,7 @@
 		"next": "9.1.1",
 		"node-fetch": "2.6.0",
 		"react": "16.10.2",
-		"react-dom": "16.10.2"
+		"react-dom": "16.10.2",
+		"swr": "0.1.7"
 	}
 }
