--- a/scripts/package.json
+++ b/scripts/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "scripts",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "convert-excel-to-json": "1.6.1",
-    "csvtojson": "2.0.10",
-    "slug": "1.1.0"
-  }
+	"name": "scripts",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"convert-excel-to-json": "1.6.1",
+		"csvtojson": "2.0.10",
+		"dotenv": "8.2.0",
+		"knex": "0.20.6",
+		"objection": "2.1.2",
+		"pg": "7.17.1",
+		"slug": "1.1.0"
+	}
 }
