--- a/server/package.json
+++ b/server/package.json
@@ -2,17 +2,22 @@
 	"name": "perulitico-api",
 	"version": "1.0.0",
 	"description": "",
-	"main": "server.js",
 	"dependencies": {
-		"@hapi/hapi": "18.4.0",
-		"lunr": "2.3.7"
+		"@hapi/hapi": "19.0.5",
+		"knex": "0.20.8",
+		"objection": "2.1.2",
+		"pg": "7.17.1",
+		"twitter": "1.7.1",
+		"dotenv": "8.2.0"
 	},
-	"devDependencies": {},
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "nodemon ./server.js",
 		"start": "node server.js"
 	},
 	"keywords": [],
 	"author": "",
-	"license": "ISC"
+	"license": "ISC",
+	"devDependencies": {
+		"nodemon": "2.0.2"
+	}
 }
