fix(polls): Update API to latest version

--- a/server/now.json
+++ b/server/now.json
@@ -1,5 +1,9 @@
 {
 	"name": "perulitico-api",
+	"env": {
+		"NODE_ENV": "production",
+		"PG_URL": "@pg_url_prod"
+	},
 	"builds": [
 		{
 			"src": "server.js",
