fix(build): Fixed name in database connection ENV variable

--- a/server/now.json
+++ b/server/now.json
@@ -2,7 +2,7 @@
 	"name": "perulitico-api",
 	"env": {
 		"NODE_ENV": "production",
-		"PG_URL": "@pg_url_prod"
+		"PG_URL_PROD": "@pg_url_prod"
 	},
 	"builds": [
 		{
